# Language-System-in-Qt

./: CMakeLists.txt  check_syntax.py
src/: LanguageManager.cpp  LanguageManager.h  main.cpp
src/qml/: Main.qml
src/qml/components/: TaskItem.qml
translations/: app_it.ts
